# ccp-as-pytorch

./: .gitignore  LICENSE  Makefile  README.md  pytest.ini  requirements-dev.txt  setup.cfg  setup.py
ccp/: ccp_training_options.py  device_decision.py  matrix_math.py  param_init.py  training.py  typing.py
ccp/classifier/: ccp_classifier.py  classifier_loss.py  q_label_dataset.py
ccp/datareaders/: __init__.py  abstract_data_reader.py  simple_data_reader.py
ccp/encoders/: byte_pair_embed.py  ccp_text_encoder.py
ccp/softlabeler/: __init__.py  ccp_labeler.py  label_loss.py
ccp/softlabeler/data/: __init__.py  ccp_batch_sampler.py  ccp_dataset.py  q_vector_handler.py
ccp/softlabeler/transforms/: generic_transforms.py  text_transforms.py  transform_apply.py  vision_transforms.py
tests/unit/: test_ccp_labeler.py  test_matrix_math.py
tests/unit/classifier/: test_classifier_loss.py
tests/unit/datareaders/: test_datareaders.py
tests/unit/encoders/: test_encoder.py
tests/unit/softlabeler/: test_data.py  test_label_loss.py  test_transforms.py
usage-examples/text-ag-news/: agnews_ccp_datareader.py  usage.ipynb
