[metadata]
description-file = README.md

[flake8]
ignore = E203,E261,E266,F401,E402,E501,W503
exclude =
  .git,
  .eggs,
  .tox,
  build,
  dist,
  data,
  *.egg-info,
  notebooks,
  results,
  .mypy*,
  *.db

# Flake8 Ignored Syntax
# Codes:         http://flake8.pycqa.org/en/latest/user/error-codes.html
# E121, # continuation line under-indented for hanging indent
# E251, # unexpected spaces around keyword / parameter equals
# E261, # at least two spaces before inline comment
# E266, # too many leading '#' for block comment; we might want blocks starting with #####
# E302, # too many blank lines
# E303, # too many blank lines
# E305, # expected 2 blank lines after class or function definition
# F401, # '' imported but unused; need this for simpleml registry
# E402, # module level import not at top of file; useful for putting docstrings at top of module before imports
# E501, # line too long
# E722 do not use bare 'except'
# F403, # import * from empty file
# F405, # star imports
# F841 local variable is assigned to but never used; breaks the pandas syntax df.query('blah = @variable')
# W503 line break before binary operator; flake8 competes with black on this
# E741 ambiguous variable name
# W605 invalid escape sequence; triggers on valid regex expression like re.search('\W')

[isort]
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = qutils
# first party also includes "the local code in src_paths"
src_paths = ccp
# unknown go in default_section
default_section = THIRDPARTY